Fixes gap issues on shop frontpage

--- a/styles/shop_style.css
+++ b/styles/shop_style.css
@@ -35,10 +35,13 @@ nav {
 	height: 100%;
 }
 
+.gap-bottom {
+	margin-bottom: 0.25rem;
+}
+
 #background-1 {
 	display: grid;
 	gap: 0.25rem;
-	margin-bottom: 0.25rem;
 	grid-template-columns: 1fr 1fr 1fr;
 	min-height: 40vh;
 	min-height: 40lvh;
@@ -69,8 +72,7 @@ nav {
 		aspect-ratio: 1.4;
 	}
 	#background-1 .maybe-invisible {
-		visibility: hidden;
-		height: 0;
+		display: none;
 	}
 }
 
@@ -110,8 +112,7 @@ nav {
 		aspect-ratio: 1.4;
 	}
 	#background-2 .maybe-invisible {
-		visibility: hidden;
-		height: 0;
+		display: none;
 	}
 }
 */
